comment and book covers selection fixed

--- a/history.css
+++ b/history.css
@@ -195,7 +195,8 @@ body{
 
 .banner--fadeButtom{
     margin-top: 14px;
-    height: 7.4rem;
+    /* if it interupts the user than  change the height to 5 or more */
+    height: 2rem;
     background-image: linear-gradient(180deg, transparent, rgba(37,37,37,0.61), #181818);
 }
 
